--- a/clientes/package.json
+++ b/clientes/package.json
@@ -15,18 +15,22 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.3.1",
         "express": "^4.17.3",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.2.6",
+        "passport": "^0.6.0",
         "swagger-ui-express": "^4.6.3",
         "yaml": "^2.2.2"
     },
     "devDependencies": {
         "@jest/globals": "28.1.2",
-        "nodemon": "^2.0.15",
         "eslint": "^8.39.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
         "jest": "28.1.2",
+        "nodemon": "^2.0.15",
         "supertest": "6.2.4"
     }
 }
