--- a/anti-fraude/package.json
+++ b/anti-fraude/package.json
@@ -15,6 +15,8 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.3.1",
         "express": "^4.17.3",
         "mongoose": "^6.2.6",
         "swagger-ui-express": "^4.6.3",
@@ -22,11 +24,11 @@
     },
     "devDependencies": {
         "@jest/globals": "28.1.2",
-        "nodemon": "^2.0.15",
         "eslint": "^8.39.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
         "jest": "28.1.2",
+        "nodemon": "^2.0.15",
         "supertest": "6.2.4"
     }
 }
