--- a/anti-fraude/package.json
+++ b/anti-fraude/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.3.0",
+        "node-fetch": "^3.3.1",
         "swagger-ui-express": "^4.6.3",
         "yaml": "^2.2.2"
     },
