--- a/transacoes/package.json
+++ b/transacoes/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
         "mongoose": "^6.2.6",
+        "node-fetch": "^3.3.1",
         "swagger-ui-express": "^4.6.3",
         "yaml": "^2.2.2"
     },
