--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,13 @@ services:
       - 3002:3002
     environment:
       CLIENTS_HOST: clientes
+      ANTI_FRAUDE_HOST: anti-fraude
       MONGO_HOST: mongo-transacoes
-      MONGO_PORT: 27018
+      MONGO_PORT: 27017
     depends_on:
       - mongo-transacoes
-    networks:
-     - transactions-bridge
+    # networks:
+    #  - transactions-bridge
 
   mongo-anti-fraude:
     image: mongo
@@ -58,13 +59,13 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: secret
-    networks:
-     - transactions-bridge
+    # networks:
+    #  - transactions-bridge
 
 volumes:
   vol-mongo-anti-fraude:
   vol-mongo-transacoes:
 
-networks:
-  transactions-bridge:
-    driver: bridge
+# networks:
+#   transactions-bridge:
+#     driver: bridge
