--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - 3000:3000
     environment:
+      TRANSACOES_HOST: transacoes
       MONGO_HOST: mongo-anti-fraude
     depends_on:
       - mongo-anti-fraude
