--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - 3000:3000
     environment:
+      CLIENTS_HOST: clientes
       TRANSACOES_HOST: transacoes
       MONGO_HOST: mongo-anti-fraude
     depends_on:
