--- a/clientes/package.json
+++ b/clientes/package.json
@@ -21,6 +21,8 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.2.6",
         "passport": "^0.6.0",
+        "passport-http-bearer": "^1.0.1",
+        "passport-local": "^1.0.0",
         "swagger-ui-express": "^4.6.3",
         "yaml": "^2.2.2"
     },
