--- a/anti-fraude/package.json
+++ b/anti-fraude/package.json
@@ -18,8 +18,12 @@
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.0",
         "node-fetch": "^3.3.1",
+        "passport": "^0.6.0",
+        "passport-http-bearer": "^1.0.1",
+        "passport-local": "^1.0.0",
         "swagger-ui-express": "^4.6.3",
         "yaml": "^2.2.2"
     },
