--- a/anti-fraude/package.json
+++ b/anti-fraude/package.json
@@ -9,7 +9,7 @@
         "dev": "nodemon server.js",
         "lint": "eslint ./src/**/*.js",
         "lint:fix": "eslint ./src/**/*.js --fix",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
         "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --watch"
     },
     "author": "",
