--- a/clientes/package.json
+++ b/clientes/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.3",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.2.6",
+        "ncrypt-js": "^2.0.0",
         "passport": "^0.6.0",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
