--- a/transacoes/package.json
+++ b/transacoes/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "amqplib": "^0.10.3",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
